SFUSA/force-app/main/default/objects/Compliance_State_Metadata__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
        <fullName>Abbreviation__c</fullName>
        <description>The two character abbreviation that represents the current state.</description>
        <inlineHelpText>Two character abbreviation of state name (i.e Illinois, IL)</inlineHelpText>
        <label>Abbreviation</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>