SFUSA/force-app/main/default/objects/Compliance_State_Metadata__c/fields/Auto_Approval_State__c.field-meta.xml
<CustomField>
        <fullName>Auto_Approval_State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this state is an "Auto Approval" State, meaning that the approval date is recorded automatically.</description>
        <inlineHelpText>Indicates that this state is approved automatically</inlineHelpText>
        <label>Auto Approval State</label>
        <type>Checkbox</type>
    </CustomField>