SFUSA/force-app/main/default/objects/Compliance_State_Metadata__c/fields/Prior_Approval_State__c.field-meta.xml
<CustomField>
        <fullName>Prior_Approval_State__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this state is a "Prior Approval" State, meaning that someone must approve before the approval date is recorded.</description>
        <inlineHelpText>Indicates that this state requires approval from someone</inlineHelpText>
        <label>Prior Approval State</label>
        <type>Checkbox</type>
    </CustomField>