SFUSA/force-app/main/default/objects/Compliance_State_Metadata__c/fields/State_Manager_Email__c.field-meta.xml
<CustomField>
        <fullName>State_Manager_Email__c</fullName>
        <description>Email Address of the manager that corresponds to this state</description>
        <inlineHelpText>Email Address of State Manager</inlineHelpText>
        <label>State Manager Email</label>
        <type>Email</type>
    </CustomField>