SFUSA/force-app/main/default/objects/Compliance_State_Metadata__c/fields/State_Manager_Name__c.field-meta.xml
<CustomField>
        <fullName>State_Manager_Name__c</fullName>
        <label>State Manager Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>