SFUSA/force-app/main/default/objects/Compliance_State_Metadata__c/listViews/All_Detailed.listView-meta.xml
<ListView>
        <fullName>All_Detailed</fullName>
        <columns>NAME</columns>
        <columns>Abbreviation__c</columns>
        <columns>State_Type__c</columns>
        <columns>State_Manager_Email__c</columns>
        <columns>State_Manager_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (Detailed)</label>
        <language>en_US</language>
    </ListView>